mysql-5.6 (5.6.16-1~exp1) UNRELEASED; urgency=medium

  * New upstream point release:
    - d/p/fix-man-page-links.patch: Dropped - no longer required.
    - d/p/*: Refreshed.

 -- James Page <james.page@ubuntu.com>  Tue, 11 Mar 2014 13:08:11 +0000

mysql-5.6 (5.6.15-1~exp2) experimental; urgency=medium

  * d/control,rules: Drop libmysqlclient18.1* and libmysqld-5.6* due to conflicts
    with libmysqlclient{18}-dev and incorrect SONAME naming (Closes: #741200).
    NOTE: libmysqlclient* and libmysqld* can be re-instated when the 5.5->5.6
    transition happens.
  * d/control: Align Conflicts/Breaks/Replaces/Provides with virtual-mysql-*
    approach for switching in/out MySQL alternatives.
  * d/mysql-server-5.6.mysql.init: Bump timeout on start to 30 seconds inline
    with mysql-5.5 changes.

 -- James Page <james.page@ubuntu.com>  Mon, 10 Mar 2014 17:36:34 +0000

mysql-5.6 (5.6.15-1~exp1) experimental; urgency=low

  [ Akhil Mohan ]
  * added libmysqlclient.so link to libmysqlclient18.1-dev package
  * revisited patches in d/patches/series; removed extra patches not needed
  * some patches were modified to handle 5.6 issues
  * mysql-server-5.6 and mysql-client-5.6 now depend on mysql-common (>= 5.5)
  * mysql-server-5.6 now provides only virtual-mysql-server
  * mysql-client-5.6 now provides only virtual-mysql-client
  * MySQL 5.6 now contains mysql-common-5.6 which is only suggested
  * moved mysql-common/etc/mysql/my.cnf to
      mysql-common-5.6/usr/share/mysql/my.cnf
  * MySQL 5.6 now gives libmysqlclient18.1, libmysqlclient18.1-dev,
      libmysqld-5.6-dev and libmysqld-5.6-pic
  * libmysqlclient18.1-dev, libmysqld-5.6-dev and libmysqld-5.6-pic packages
      conflict with their respective counterparts from MySQL 5.5
  * link traversal for libmysqlclient is
      libmysqlclient.so (contained in libmysqclient18.1-dev)  ->
      libmysqlclient.so.18 (contained in libmysqclient18.1)   ->
      libmysqlclient.so.18.1 (contained in libmysqclient18.1) ->