@@ -218,23 +218,24 @@ auto_install-stamp:
 #        usr/share/mysql/mysql.server
 #        usr/share/mysql/binary-configure
 # NOTE(james-page) usr/include -> end can be dropped when 5.6 becomes default
-override_dh_install:
-	dh_install --fail-missing                       \
-        -Xusr/share/man/                                \
-        -Xusr/share/info/mysql.info                     \
-        -Xusr/share/mysql/magic                         \
-        -Xusr/share/mysql/solaris/postinstall-solaris   \
-        -Xusr/lib/mysql/plugin/daemon_example.ini       \
-        -Xusr/bin/mysqlaccess.conf                      \
-        -Xusr/share/mysql/mi_test_all                   \
-        -Xusr/share/mysql/mysql-log-rotate              \
-        -Xusr/share/mysql/mysql.server                  \
-        -Xusr/share/mysql/binary-configure              \
-        -Xusr/share/mysql/my-                           \
-        -Xusr/include                                   \
-        -Xusr/bin/mysql_config                          \
-        -Xusr/share/aclocal/mysql.m4                    \
-        -Xlibmysql
+# NOTE(james-page) skip --fail-missing until package is complete 5.5 replacement
+#override_dh_install:
+#	dh_install --fail-missing                       \
+#        -Xusr/share/man/                                \
+#        -Xusr/share/info/mysql.info                     \
+#        -Xusr/share/mysql/magic                         \
+#        -Xusr/share/mysql/solaris/postinstall-solaris   \
+#        -Xusr/lib/mysql/plugin/daemon_example.ini       \
+#        -Xusr/bin/mysqlaccess.conf                      \
+#        -Xusr/share/mysql/mi_test_all                   \
+#        -Xusr/share/mysql/mysql-log-rotate              \
+#        -Xusr/share/mysql/mysql.server                  \
+#        -Xusr/share/mysql/binary-configure              \
+#        -Xusr/share/mysql/my-                           \
+#        -Xusr/include                                   \
+#        -Xusr/bin/mysql_config                          \
+#        -Xusr/share/aclocal/mysql.m4                    \
+#        -Xlibmysql
 
 override_dh_installlogrotate-arch:
 	dh_installlogrotate --name mysql-server
