@@ -3,6 +3,8 @@ mysql-5.6 (5.6.16-1~exp1) UNRELEASED; urgency=medium
   * New upstream point release:
     - d/p/fix-man-page-links.patch: Dropped - no longer required.
     - d/p/*: Refreshed.
+  * d/rules: Don't run dh_install with --fail-missing and exclusions until
+    package is a complete replacement for mysql-5.5.
 
  -- James Page <james.page@ubuntu.com>  Tue, 11 Mar 2014 13:08:11 +0000
 
